--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rebuzzle",
+	"name": "web",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -9,11 +9,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.10.8",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-menubar": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@supabase/supabase-js": "^2.44.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"graphql": "^16.9.0",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.407.0",
 		"next": "^14.2.5",
