--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -4,11 +4,11 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.ts",
-    "css": "app/globals.css",
-    "baseColor": "slate",
-    "cssVariables": true,
-    "prefix": ""
+		"config": "tailwind.config.ts",
+		"css": "styles/globals.css",
+		"baseColor": "slate",
+		"cssVariables": true,
+		"prefix": ""
   },
   "aliases": {
     "components": "@/components",
