--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,18 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.10.8",
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-menubar": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@shadcn/ui": "^0.0.4",
 		"@supabase/supabase-js": "^2.44.3",
+		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"formidable": "^3.5.1",
 		"graphql": "^16.9.0",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.407.0",
@@ -23,8 +29,10 @@
 		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.52.1",
 		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
