--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,11 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-menubar": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.2",
 		"@shadcn/ui": "^0.0.4",
 		"@supabase/supabase-js": "^2.44.3",
+		"@vercel/analytics": "^1.3.1",
+		"@vercel/speed-insights": "^1.0.12",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
