--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -12,6 +12,7 @@
   },
   "aliases": {
 		"components": "@/components",
+		"hooks": "@/hooks",
 		"context": "@/context",
 		"utils": "@/lib/utils"
   }
