--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,9 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.10.8",
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
 		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
@@ -25,6 +28,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"formidable": "^3.5.1",
+		"framer-motion": "^11.3.2",
 		"graphql": "^16.9.0",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.407.0",
