--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,13 @@
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-menubar": "^1.1.1",
+		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@shadcn/ui": "^0.0.4",
@@ -25,8 +28,11 @@
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
 		"axios": "^1.7.2",
+		"busboy": "^1.6.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"crypto": "^1.0.1",
+		"date-fns": "^3.6.0",
 		"formidable": "^3.5.1",
 		"framer-motion": "^11.3.2",
 		"graphql": "^16.9.0",
@@ -34,11 +40,17 @@
 		"lucide-react": "^0.407.0",
 		"next": "^14.2.5",
 		"next-themes": "^0.3.0",
+		"node-fetch": "^3.3.2",
+		"openai": "^4.52.7",
 		"react": "^18.3.1",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.1",
+		"string-comparison": "^1.3.0",
+		"string-similarity": "^4.0.4",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^10.0.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
