--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
 		"clsx": "^2.1.1",
 		"crypto": "^1.0.1",
 		"date-fns": "^3.6.0",
+		"feather-icons": "^4.29.2",
 		"formidable": "^3.5.1",
 		"framer-motion": "^11.3.2",
 		"graphql": "^16.9.0",
@@ -45,7 +46,9 @@
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
+		"react-feather": "^2.0.10",
 		"react-hook-form": "^7.52.1",
+		"recharts": "^2.12.7",
 		"string-comparison": "^1.3.0",
 		"string-similarity": "^4.0.4",
 		"tailwind-merge": "^2.4.0",
