--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@hookform/resolvers": "^3.9.0",
+		"@next/third-parties": "^14.2.5",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
