--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^10.0.0",
+		"vaul": "^0.9.1",
 		"web-push": "^3.6.7",
 		"zod": "^3.23.8"
 	},
