--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-menubar": "^1.1.1",
 		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@shadcn/ui": "^0.0.4",
 		"@supabase/supabase-js": "^2.44.3",
