--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
+		"@react-email/components": "^0.0.21",
 		"@shadcn/ui": "^0.0.4",
 		"@supabase/supabase-js": "^2.44.3",
 		"@vercel/analytics": "^1.3.1",
@@ -53,6 +54,7 @@
 		"react-feather": "^2.0.10",
 		"react-hook-form": "^7.52.1",
 		"recharts": "^2.12.7",
+		"resend": "^3.4.0",
 		"string-comparison": "^1.3.0",
 		"string-similarity": "^4.0.4",
 		"tailwind-merge": "^2.4.0",
