--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
-		"@react-email/components": "^0.0.21",
+		"@react-email/components": "0.0.21",
 		"@shadcn/ui": "^0.0.4",
 		"@supabase/supabase-js": "^2.44.3",
 		"@vercel/analytics": "^1.3.1",
@@ -51,6 +51,7 @@
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
+		"react-email": "2.1.5",
 		"react-feather": "^2.0.10",
 		"react-hook-form": "^7.52.1",
 		"recharts": "^2.12.7",
