--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
 		"graphql": "^16.9.0",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.407.0",
-		"next": "^15.0.0-rc.0",
+		"next": "^14.2.5",
 		"next-themes": "^0.3.0",
 		"node-cron": "^3.0.3",
 		"node-fetch": "^3.3.2",
 		"openai": "^4.52.7",
-		"react": "^19.0.0-rc-d025ddd3-20240722",
+		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
-		"react-dom": "^19.0.0-rc-d025ddd3-20240722",
+		"react-dom": "^18.3.1",
 		"react-email": "2.1.5",
 		"react-feather": "^2.0.10",
 		"react-hook-form": "^7.52.1",
