--- a/package.json
+++ b/package.json
@@ -3,77 +3,42 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"@apollo/client": "^3.10.8",
-		"@chakra-ui/react": "^2.8.2",
-		"@emotion/react": "^11.11.4",
-		"@emotion/styled": "^11.11.5",
-		"@hookform/resolvers": "^3.9.0",
-		"@next/third-parties": "^14.2.14",
-		"@radix-ui/react-avatar": "^1.1.0",
-		"@radix-ui/react-dialog": "^1.1.1",
-		"@radix-ui/react-dropdown-menu": "^2.1.1",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-menubar": "^1.1.1",
-		"@radix-ui/react-popover": "^1.1.1",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-switch": "^1.1.0",
-		"@radix-ui/react-tooltip": "^1.1.2",
-		"@react-email/components": "0.0.21",
-		"@shadcn/ui": "^0.0.4",
-		"@supabase/supabase-js": "^2.44.3",
-		"@vercel/analytics": "^1.3.1",
-		"@vercel/speed-insights": "^1.0.12",
-		"axios": "^1.7.2",
-		"busboy": "^1.6.0",
+		"@supabase/ssr": "^0.1.0",
+		"@supabase/supabase-js": "^2.39.0",
+		"@tanstack/react-query": "^5.28.4",
+		"@tanstack/react-query-devtools": "^5.28.4",
 		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"crypto": "^1.0.1",
+		"clsx": "^2.1.0",
 		"date-fns": "^3.6.0",
-		"dotenv": "^16.4.5",
-		"feather-icons": "^4.29.2",
-		"formidable": "^3.5.1",
-		"framer-motion": "^11.3.2",
-		"graphql": "^16.9.0",
-		"input-otp": "^1.2.4",
-		"lucide-react": "^0.407.0",
-		"next": "^14.2.14",
+		"lucide-react": "^0.358.0",
+		"next": "^15.0.4-canary.34",
 		"next-themes": "^0.3.0",
-		"node-cron": "^3.0.3",
-		"node-fetch": "^3.3.2",
-		"openai": "^4.52.7",
-		"react": "^18.3.1",
-		"react-day-picker": "^8.10.1",
-		"react-dom": "^18.3.1",
-		"react-email": "2.1.5",
-		"react-feather": "^2.0.10",
-		"react-hook-form": "^7.52.1",
-		"recharts": "^2.12.7",
-		"resend": "^3.4.0",
-		"string-comparison": "^1.3.0",
-		"string-similarity": "^4.0.4",
-		"tailwind-merge": "^2.4.0",
+		"react": "^19.0.0-rc-5b0ef217-20241202",
+		"react-dom": "^19.0.0-rc-5b0ef217-20241202",
+		"sharp": "^0.33.2",
+		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
-		"uuid": "^10.0.0",
-		"vaul": "^0.9.1",
-		"web-push": "^3.6.7",
-		"zod": "^3.23.8"
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.5",
-		"postcss": "^8",
+		"@types/node": "^20.11.28",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"autoprefixer": "^10.4.18",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "14.2.0-canary.27",
+		"postcss": "^8.4.35",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.12",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"typescript": "^5.4.2"
 	},
 	"exports": {
 		"./*": [
