--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
 		{
 			"path": "/api/cron/generate-puzzles",
 			"schedule": "0 0 * * *"
+		},
+		{
+			"path": "/api/cron/send-notifications",
+			"schedule": "0 8 * * *"
 		}
 	]
 }
