--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,22 @@
 {
-  "name": "Rebuzzle",
+  "name": "Rebuzzle - Daily Rebus Puzzle Game",
   "short_name": "Rebuzzle",
-  "description": "A fun and challenging puzzle game",
+  "description": "Challenge your mind with daily rebus puzzles. Solve visual word puzzles and compete with friends!",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "theme_color": "#8b5cf6",
+  "categories": ["games", "entertainment", "education"],
+  "lang": "en-US",
+  "scope": "/",
   "icons": [
+    {
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
@@ -18,6 +28,56 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshot-mobile.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshot-desktop.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Play Today's Puzzle",
+      "short_name": "Play",
+      "description": "Jump directly to today's puzzle",
+      "url": "/",
+      "icons": [
+        {
+          "src": "/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    }
+  ],
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
+  "handle_links": "preferred",
+  "protocol_handlers": [
+    {
+      "protocol": "web+rebuzzle",
+      "url": "/?puzzle=%s"
     }
   ]
 } 
