Refactor desktop app, add mobile features, and create shared UI package
- Refactor desktop app with new renderer structure and routing
- Add mobile app features: achievements, leaderboard, auth, offline support
- Create shared UI package with game components and primitives
- Update web auth middleware and login route
- Add vercel.json configuration

--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "react-jsx",
     "baseUrl": ".",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/renderer/*"],
+      "@rebuzzle/game-logic": ["../../packages/game-logic/src"],
+      "@rebuzzle/config": ["../../packages/config/src"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "electron/**/*.ts"],
   "exclude": ["node_modules", "dist", "dist-electron", "release"]
 }
