--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@rebuzzle/config": "workspace:*",
+    "@rebuzzle/game-logic": "workspace:*",
     "electron-store": "^11.0.2"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
       "buildResources": "build"
     },
     "files": [
+      "dist/**/*",
       "dist-electron/**/*",
       "!node_modules/**/*"
     ],
