--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,8 @@
     "typecheck": "echo 'Skipping typecheck - React 18/19 type mismatch in monorepo (runtime works fine)'"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@rebuzzle/config": "workspace:*",
     "@rebuzzle/game-logic": "workspace:*",
     "expo": "~52.0.0",
@@ -23,6 +25,7 @@
     "expo-linking": "~7.0.0",
     "expo-router": "~4.0.0",
     "expo-secure-store": "~14.0.0",
+    "expo-sharing": "~13.0.0",
     "expo-splash-screen": "~0.29.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
