--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json"
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "installCommand": "pnpm install",
+  "buildCommand": "pnpm turbo build --filter=@rebuzzle/web",
+  "outputDirectory": "apps/web/.next",
+  "framework": "nextjs"
 }
