--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -92,6 +92,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "web-push": "^3.6.7",
     "zod": "^3.25.76"
@@ -105,6 +106,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/uuid": "^11.0.0",
     "autoprefixer": "10.4.20",
     "babel-plugin-react-compiler": "^1.0.0",
     "jest": "^30.2.0",
