--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -21,18 +21,22 @@
     "@rebuzzle/game-logic": "workspace:*",
     "expo": "~52.0.0",
     "expo-constants": "~17.0.0",
-    "expo-haptics": "~14.0.0",
+    "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.0",
     "expo-router": "~4.0.0",
     "expo-secure-store": "~14.0.0",
-    "expo-sharing": "~13.0.0",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.0",
     "expo-status-bar": "~2.0.0",
+    "lucide-react-native": "^0.555.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
