Refactor mobile components and add puzzle display utilities
- Add mobile achievement components (AchievementCard, CategoryTabs, RarityFilter)
- Add mobile game components (AnswerInput, CountdownTimer, GameHeader, GuessHistory, PersonalizedGreeting, PuzzleCard, ScoreBreakdown)
- Add mobile leaderboard components (LeaderboardEntry, TimeframeTabs, UserPosition)
- Add mobile profile components (LevelProgress, PerformanceCard, StatsGrid)
- Add puzzle-display utility module to game-logic package
- Update desktop app tooltip and game page
- Update web app components (GameBoard, Layout, PuzzleDisplay)
- Update global styles

--- a/packages/game-logic/package.json
+++ b/packages/game-logic/package.json
@@ -8,7 +8,8 @@
     ".": "./src/index.ts",
     "./fuzzy-match": "./src/fuzzy-match.ts",
     "./achievements": "./src/achievements/index.ts",
-    "./scoring": "./src/scoring.ts"
+    "./scoring": "./src/scoring.ts",
+    "./puzzle-display": "./src/puzzle-display.ts"
   },
   "dependencies": {
     "@rebuzzle/config": "workspace:*"
